--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -34,7 +34,7 @@
 body, html {
     height: 500px;
     background-color: rgb(54, 2, 102);
-    color: rgb(36, 30, 30);
+    /* color: rgb(36, 30, 30); */
   }
 
 .column_image1{
@@ -51,9 +51,91 @@ hr {
     display: block;
     height: 3px;
     width: 100%;
-    float: center;
     border: 0;
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
 }
+
+#short-hr{
+    width: 300px;
+    height: 5px;
+    background-color: rgb(233, 185, 218);
+}
+
+h1{
+    color: white;
+}
+.after_break{
+    color: white;
+    font-family: 'Crimson';
+}
+
+.column-text{
+    width: 100%;
+    padding: 5px;
+    border: white solid 1px;
+}
+
+section.pricing {
+    /* background: #007bff; */
+    /* background: linear-gradient(to right, #0062E6, #33AEFF); */
+  }
+  
+  .pricing .card {
+    border: none;
+    border-radius: 1rem;
+    transition: all 0.2s;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  }
+  
+  .pricing hr {
+    margin: 1.5rem 0;
+  }
+  
+  .pricing .card-title {
+    margin: 0.5rem 0;
+    font-size: 0.9rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+  }
+  
+  .pricing .card-price {
+    font-size: 3rem;
+    margin: 0;
+  }
+  
+  .pricing .card-price .period {
+    font-size: 0.8rem;
+  }
+  
+  .pricing ul li {
+    margin-bottom: 1rem;
+  }
+  
+  .pricing .text-muted {
+    opacity: 0.7;
+  }
+  
+  .pricing .btn {
+    font-size: 80%;
+    border-radius: 5rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+    padding: 1rem;
+    opacity: 0.7;
+    transition: all 0.2s;
+  }
+  
+  /* Hover Effects on Card */
+  
+  @media (min-width: 992px) {
+    .pricing .card:hover {
+      margin-top: -.25rem;
+      margin-bottom: .25rem;
+      box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+    }
+    .pricing .card:hover .btn {
+      opacity: 1;
+    }
+  }
